# Android_Superpowered_DSP_Template

./: .gitignore  .gitmodules  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sigmadelta/superpowered_dsp_template/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sigmadelta/superpowered_dsp_template/: MainActivity.java  PermissionManager.java  SuperPoweredPlayer.java  UriHelper.java
app/src/main/jni/: SuperpoweredRenderer.cpp  SuperpoweredRenderer.h
app/src/main/jni/Superpowered/AndroidIO/: SuperpoweredAndroidAudioIO.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sigmadelta/superpowered_dsp_template/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
